--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,41 @@
-# Logs
-logs
-*.log
+# Dependency directories
+*node_modules
+
+# Production build output
+build/
+
+# Local environment files
+.env
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+# Editor-specific files
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.env
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+
+# Optional npm cache directory
+.npm/
+
+# Parcel-bundler cache
+.cache/
+
+# Lint/formatting files
+.eslintcache
+
+# Testing
+coverage/
